--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="author" content="Jonas Bittel">
-	<script src="js/Three.min.js" type="text/javascript" ></script>
+	<script src="js/three.min.js" type="text/javascript" ></script>
 	<script src="js/jquery-1.8.2.min.js" type="text/javascript" ></script>
 	<script src="js/sokoban.js" type="text/javascript" ></script>
 	<style>
